tests/ui/traits/const-traits/default-method-body-is-const-body-checking.stderr
error[E0277]: the trait bound `(): ~const Tr` is not satisfied
  --> $DIR/default-method-body-is-const-body-checking.rs:12:9
   |
LL |         foo::<()>();
   |         ^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
